RESOLVED FIXED274722
[Invalidation] Table rows and sections don't get their preferredLogicalWidthsDirty flags cleared
https://bugs.webkit.org/show_bug.cgi?id=274722
Summary [Invalidation] Table rows and sections don't get their preferredLogicalWidths...
alan
Reported 2024-05-25 20:37:18 PDT
ssia
Attachments
Patch (2.15 KB, patch)
2024-05-25 20:45 PDT, alan
no flags
[fast-cq]Patch (6.40 KB, patch)
2024-05-27 14:29 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-05-25 20:45:04 PDT
alan
Comment 2 2024-05-27 14:29:01 PDT
Created attachment 471521 [details] [fast-cq]Patch
EWS
Comment 3 2024-05-27 15:55:37 PDT
Committed 279358@main (d182dd15e3fc): <https://commits.webkit.org/279358@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471521 [details].
Radar WebKit Bug Importer
Comment 4 2024-05-27 15:56:15 PDT
Note You need to log in before you can comment on or make changes to this bug.