[Invalidation] Table rows and sections don't get their preferredLogicalWidthsDirty flags cleared https://bugs.webkit.org/show_bug.cgi?id=274722

Reviewed by Antti Koivisto.

Any subsequent preferredLogicalWidthsDirty invalidation fails when it is set on the row/section (see RenderObject::setPreferredLogicalWidthsDirty).

* Source/WebCore/rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::recalcColumn):
(WebCore::AutoTableLayout::fullRecalc):

fast/table/border-collapsing/cached-change-tbody-border-width.html: progression

Canonical link: https://commits.webkit.org/279358@main